<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_berita"
    app:cardCornerRadius="@dimen/cardview_radius"
    android:layout_margin="@dimen/cardview_margin"
    android:layout_gravity="center_vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/]list_height"
        android:paddingRight="@dimen/padding_list"
        android:paddingLeft="@dimen/padding_list">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_list_img"
            android:id="@+id/iv_img"
            android:scaleType="centerCrop"
            tools:src="@color/colorGray"
            android:layout_marginBottom="@dimen/cardview_margin"/>
        <TextView
            android:id="@+id/tv_judul"
            tools:text="@string/judul_berita"
            android:layout_below="@id/iv_img"
            style="@style/Text.Judul"
            android:layout_width="wrap_content" />
        <TextView
            style="@style/Text.Summary"
            android:id="@+id/tv_ringkasan"
            tools:text="@string/summary"
            android:layout_below="@id/tv_judul"
            android:maxLines="2"/>
        <TextView
            style="@style/Text.Src"
            android:id="@+id/tv_src"
            tools:text="@string/src"
            android:layout_below="@id/tv_ringkasan"
            android:layout_alignParentEnd="true"
            android:layout_height="match_parent" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>